# Research-Pilot-Ai-Agent

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
modules/: agent.py  chat.py  pipeline.py  prompts.py  tools.py
