[project]
name = "Research-Pilot-Ai-Agent"
version = "0.1.0"
description = "ResearchPilot is an AI research assistant that searches the web, gathers evidence, generates structured reports, reviews findings, and produces refined research outputs."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arxiv>=1.4.8",
    "beautifulsoup4>=4.14.3",
    "groq>=0.37.1",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "readability>=0.3.2",
    "readability-lxml>=0.8.4.1",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.25",
    "trafilatura>=2.0.0",
]
